# workplace-monitoring

./: .gitignore  LICENSE  README.md
Controller_ESP32_S3_code/: Controller_ESP32_S3_code.ino  Display_E-inc.ino  Display_image.h  Reading_modules.ino  WiFi_Web_Connect.ino
Controller_ESP32_S3_code/Icons/Вайфай/: wi_fi.txt
WorkplaceMonitor/: links.txt  posture_checker.py
WorkplaceMonitorQ/: CMakeLists.txt  camera_thread.cpp  camera_thread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  инструкция2.docx
WorkplaceMonitorvvvv/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediapipe_pose.cpp  mediapipe_pose.h  mp_pose_stdout.py
